--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,13 @@ footer {
     margin: 50px auto;
     padding: 20px;
 }
+.article-image {
+    max-width: 220px; /* Ще менші фото */
+    height: auto;
+    
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
 
 .article {
     background: white;
